--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 asgiref==3.6.0
 Django==4.2.1
 djangorestframework==3.14.0
+django-extensions==3.2.3
 Markdown==3.4.3
 pytz==2023.3
 sqlparse==0.4.4
 gunicorn==19.7.1
 openai==0.27.6
 requests==2.28.2
-tensorflow==2.13.0rc0
+# tensorflow==2.13.0rc0
+ipython==8.18.1
