--- a/default.conf
+++ b/default.conf
@@ -1,9 +1,9 @@
 server {
     listen 8020;
-    server_name http://openai_plus.start.shikhar;
+    server_name openai_service;
 
     location / {
-        proxy_pass http://127.0.0.1:8010;
+        proxy_pass http://openai:8010;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
